css/style.css
:root {
    --blue: #1B72E8;
    --dark-blue: #051E34;
    --dark-gray: #E5E5E5;
    --light-gray: #F7F7F7;
    --light: #ffffff;
}



/* app */

#app {
    height: 100vh;
    display: flex;
    flex-direction: column;
}

/* toolbar */

.app-toolbar {
    height: auto;
    flex-shrink: 0; 
}

.mobile-logo {
    aspect-ratio: 1;
    width: 45px;
}

#app,
.app.app-toolbar,
.app-body,
.sidebar {
    overflow: hidden;
}

/* app body */

.app-body {
    flex-grow: 1;
    display: flex;
}

/* sidebar */

.sidebar {
    min-width: 70px;
    flex-shrink: 0;
    background-color: var(--dark-blue);
    color: var(--light);
    background-image: url(/img/sidebar-bg.png);
}

.sidebar i{
    font-size: 20px;
}

/* main content */

.main-content {
    overflow:auto;
}

/* main header */

.main-header {
    background-color: var(--blue);
    color: var(--light);
}

.main-content {
    flex-grow: 1;
}

/* next classes card table */

.next-classes img {
    width: 35px
}

.classes-table .item-resp {
    display: none;

}

.classes-table .item-start  {
    text-align: left;
}

/* grafic-card */

/* .grafic-card img {
    max-width: 430px;
} */

/* media query */

/* @media (min-width: 576px) { ... } */


@media (min-width: 768px) {
    .classes-table .item-resp {
        display: table-cell;
    }

}


/* @media (min-width: 992px) {

} */


/* @media (min-width: 1200px) { ... } */


/* @media (min-width: 1400px) { ... } */

/* debug */

.debu #app {
    padding: 10px;
}

/* .debug .app-toolbar {
    border: 2px solid red;
    /* padding: 10px; 
} */

/* .debug .app-body {
    border: 2px solid blue;
    padding: 10px;
} */

/* .debug .sidebar {
    border: 2px solid green;
} */

.debug .main-content {
    border: 2px solid green;
}

/* .debug .container-fluid div {
    border: 2px solid rgb(112, 112, 7);
    height: 40px;
} */

